# health-coach

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mise.toml  .sops.yaml  LICENSE  Makefile  README.md  RELEASE_NOTES.md  Taskfile.yml  chainlit.md  pyproject.toml  renovate.json  repository.yaml  requirements.txt  secrets.enc.yaml
.chainlit/: config.toml
config/: athlete.example.yaml  athlete.yaml  equipment.example.yaml  equipment.yaml  treadmill_templates.yaml  zones.yaml
db/: alembic.ini
docs/: IFIT_API_REPORT.md
ha-addon/: repository.yaml
healthcoach/: CHANGELOG.md  DOCS.md  Dockerfile  config.yaml  run.sh
public/: manifest.json  pwa.js  theme.css
scripts/: addon_config.py  athlete_setup.py  athlete_store.py  cache_store.py  calc_pmc.py  calc_zones.py  chat_app.py  chat_charts.py  chat_tools_schema.py  credential_store.py  cross_channel.py  db_pool.py  fitness_assessment.py  garmin_auth.py  garmin_fetch.py  garmin_login.py  garmin_pull_profile.py  gen_bodymap.py  gen_treadmill_workout.py  health_tools.py  hevy_exercise_resolver.py  hevy_mitm_capture.py  http_clients.py  ifit_auth.py  ifit_browser_login.py  ifit_extract_exercises.py  ifit_list_series.py  ifit_llm_extract.py  ifit_mitm_capture.py  ifit_probe.py  ifit_r2_sync.py  ifit_recommend.py  ifit_strength_recommend.py  ingest_books.py  init_addon.py  knowledge_store.py  llm_result_summarizer.py  llm_utils.py  mcp-env.sh  mcp_client_adapter.py  (+22 more)
tests/: conftest.py  seed_data.py  test_action_items.py  test_activities.py  test_ai_gateway.py  test_body_vitals.py  test_cache_store.py  test_credential_store.py  test_external_tools.py  test_fitness_pmc.py  test_hevy_compare.py  test_hevy_routine.py  test_ifit_auth.py  test_ifit_programs.py  test_ifit_recommend.py  test_ifit_search.py  test_llm_cost_optimizations.py  test_llm_result_summarizer.py  test_localise_rows.py  test_mcp_client_adapter.py  test_mcp_protocol.py  test_no_apple_oauth.py  test_platform_ops_tools.py  test_profile.py  test_r2_store.py  test_route_discovery.py  test_strength.py  test_telegram_bot.py  test_telegram_format.py  test_timezone.py  test_tool_dispatch.py  test_tool_executor.py  (+3 more)
(+39 files in other folders)
