[project]
name = "alexeym-health"
version = "0.1.0"
description = "Data-driven health and fitness tracking framework"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary",
    "pyyaml",
    "python-dotenv",
    "fastmcp",
    "garminconnect",
    "chainlit",
    "openai",
    "plotly",
    "PyJWT[crypto]",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.setuptools.packages.find]
where = ["scripts"]
include = []
