[project]
name = "health-coach"
version = "0.1.0"
description = "Data-driven health and fitness tracking framework"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary",
    "pyyaml",
    "python-dotenv",
    "fastmcp",
    "garminconnect",
    "chainlit",
    "openai",
    "plotly",
    "PyJWT[crypto]",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "testcontainers[postgres]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not slow and not integration'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that need the real production DB (deselect with '-m \"not integration\"')",
]

[tool.setuptools.packages.find]
where = ["scripts"]
include = []
